# wxpython-grouping

./: README.md  csv_read.py  csv_ui_test.py  main.py  make.py  pyproject.toml  requirements.txt  task.md
docs/source/: conf.py  groupbuilder.core.rst  modules.rst  unit.rst
docs/source/builder/: algo_thread.rst  csv_name_picker_dialog.rst  group_app.rst  groupcalc.rst
docs/source/core/: algorithm.rst  data_model_converter.rst  data_models.rst  exceptions.rst  groupbuilder.core.rst  logger.rst  sys_utils.rst
docs/source/util/: grid_export.rst  groupbuilder.utility.rst  number_to_text.rst
groupbuilder/: __init__.py  algorithm_thread.py  csv_name_picker_dialog.py  file_picker_dialog.py  group_app.py  group_config_dialog.py  groupcalculator.py  setup.py
groupbuilder/core/: __init__.py  algorithm.py  base.py  data_model_converter.py  data_models.py  logger.py  sys_utils.py
groupbuilder/layout/: csv_filepick_dia.py  csv_name_dia.py  group_conf_dia.py  layout_base.py
groupbuilder/utility/: csv_read.py  grid_export.py  nothing.py  number_to_text.py
groupcalc/core/: base.py  exceptions.py
misc/: builder.fbp  d.drawio
test/: groupcalculator_test.py
