[project]
name = "wxpython-grouping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "alabaster==1.0.0",
    "annotated-types==0.7.0",
    "autodoc-pydantic==2.2.0",
    "babel==2.16.0",
    "certifi==2025.1.31",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "cython==3.0.11",
    "docutils==0.21.2",
    "graphviz==0.20.3",
    "idna==3.10",
    "imagesize==1.4.1",
    "jinja2==3.1.5",
    "markupsafe==3.0.2",
    "packaging==24.2",
    "psutil==7.0.0",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "pygments==2.19.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "setuptools==75.8.0",
    "six==1.17.0",
    "snowballstemmer==2.2.0",
    "sphinx==8.1.3",
    "sphinx-autodoc-typehints==3.0.1",
    "sphinx-rtd-theme==3.0.2",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "termcolor==2.5.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "wxpython==4.2.2",
]
